<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Krypton settings -->
    <string name="krypton_settings_title">Krypton settings</string>

    <!-- Theme settings -->
    <string name="theme_settings_title">Theme</string>
    <string name="theme_settings_summary">Monet</string>

    <!-- Color picker -->
    <string name="rgb">RGB</string>
    <string name="hsl">HSL</string>
    <string name="hsv">HSV</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- Monet engine -->
    <string name="monet_engine_settings_title">Monet engine</string>
    <string name="monet_engine_settings_summary">Custom color, colorfulness, brightness</string>
    <string name="accurate_shades_title">Use accurate shades</string>
    <string name="use_wallpaper_color_title">Use wallpaper color</string>
    <string name="color_override_title">Custom color picker</string>
    <string name="color_override_summary">"Choose a custom accent color to override the colors chosen by monet engine"</string>
    <string name="invalid_color_input">Invalid color input!</string>
    <string name="chroma_factor_title">Colorfulness</string>
    <string name="linear_lightness_title">Use custom lightness scale</string>
    <string name="white_luminance_title">Brightness</string>

    <!-- Title of the setting which enables overlays to customize headline and body fonts. -->
    <string name="theme_customization_font_title">Headline / Body font</string>
    <!-- Title of the setting which enables overlays to customize the system wide icon pack. -->
    <string name="theme_customization_icon_pack_title">Icon pack</string>

    <!-- Statusbar settings -->
    <string name="statusbar_settings_title">Statusbar</string>
    <string name="statusbar_settings_summary">Network traffic, Gestures, Location indicator</string>

    <!-- Network traffic -->
    <string name="network_traffic_category_title">Network traffic</string>
    <string name="statusbar_network_traffic_threshold_tx_title">Auto hide threshold for upload</string>
    <string name="statusbar_network_traffic_threshold_rx_title">Auto hide threshold for download</string>
    <string name="statusbar_network_traffic_unit_text_size_title">Network traffic unit text size</string>
    <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
    <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>

    <!-- QS Brightness -->
    <string name="qs_brightness_category_title">Brightness slider</string>
    <string name="qs_show_brightness_title">Show brightness slider in QS panel</string>
    <string name="qqs_show_brightness_title">Show brightness slider in QQS panel</string>
    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
    <string name="qs_brightness_position_bottom_summary_on">Position: Bottom</string>
    <string name="qs_brightness_position_bottom_summary_off">Position: Top</string>
    <string name="qs_show_auto_brightness_button_title">Show auto brightness button</string>

    <!-- Combined signal icons in status bar -->
    <string name="combined_status_bar_signal_icons">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar. Needs SystemUI restart or reboot</string>

    <!-- Lockscree settings -->
    <string name="lockscreen_settings_title">Lockscreen</string>
    <string name="lockscreen_settings_summary">Charging info, Gestures</string>

    <!-- Lockscreen battery info -->
    <string name="lockscreen_charging_info_title">Show charging info in lockscreen</string>
    <string name="lockscreen_charging_info_summary">Shows temperature, charging current and more while plugged in</string>

    <string name="screen_off_fod_title">Screen off FOD</string>
    <string name="screen_off_fod_summary">Enable FOD even when screen is off</string>

    <!-- Device settings -->
    <string name="device_settings_title">Device settings</string>
    <string name="device_settings_summary">Settings for device specific parts</string>

    <!--Double Tap to Sleep Lockscreen-->
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreeen to sleep</string>

    <!-- Double Tap to Sleep Statusbar -->
    <string name="statusbar_gesture_title">Gestures</string>
    <string name="double_tap_sleep_gesture_title">Double-tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>

    <string name="miscellaneous_category_title">Miscellaneous</string>

    <!-- Location privacy indicator -->
    <string name="location_privacy_indicator_title">Show privacy indicator for location</string>
    <string name="location_privacy_indicator_summary">Reboot or restart system UI for it to take effect</string>

    <!-- Miscellaneous -->
    <string name="miscellaneous_settings_summary">Gestures, Screenshot sound</string>

    <!-- Torch Power button gestures -->
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
    <string name="torch_power_button_gesture_lp">Long press power button</string>

    <!-- Screenshot shutter -->
    <string name="screenshot_shutter_sound_title">Screenshot sound</string>
    <string name="screenshot_shutter_sound_summary">Enable screenshot sound and vibration</string>

    <!-- Gaming mode -->
    <string name="gaming_title">Gaming mode</string>
    <string name="gaming_title_summary">Extra features for immersive gaming experience</string>
    <string name="gaming_mode_disable_auto_brightness_title">Disable automatic brightness</string>
    <string name="gaming_mode_disable_auto_brightness_summary">Disable auto brightness when entering game mode</string>
    <string name="gaming_mode_notification_danmaku_title">Notification Danmaku</string>
    <string name="gaming_mode_notification_danmaku_summary">Display the notification content in the form of danmaku in the game</string>
    <string name="gaming_mode_quick_start_apps_title">Quick Start Apps</string>
    <string name="gaming_mode_quick_start_apps_summary">Choose the application that you want to launch with a floating ball</string>
    <string name="gaming_mode_menu_opacity_title">Menu opacity level</string>

    <string name="gaming_mode_performance">Performance</string>
    <string name="gaming_mode_change_performance_title">Performance tuning</string>
    <string name="gaming_mode_change_performance_summary">Adjust performance level when starting game</string>
    <string name="gaming_mode_performance_title">Performance level</string>

    <string name="gaming_mode_dnd">Do not distrub</string>
    <string name="gaming_mode_disable_notification_alert_title">Disable notification alert</string>
    <string name="gaming_mode_disable_notification_alert_summary">Do not allow floating notification and conversation bubbles other than incoming calls and alarms</string>
    <string name="gaming_mode_disable_ringtone_title">No ringing</string>
    <string name="gaming_mode_disable_ringtone_summary">Turn off the ringing of incoming calls and notifications in gaming mode</string>
    <string name="gaming_mode_auto_answer_call_title">Answering calls automatically</string>
    <string name="gaming_mode_auto_answer_call_summary">Answer calls automatically in the game and hands free when no headphones connected</string>

    <string name="gaming_mode_prevent_accidental_touch">Prevent accidental touch</string>
    <string name="gaming_mode_disable_gesture_title">Disable gestures</string>

    <string name="gaming_mode_apps_title">Game list</string>
    <string name="gaming_mode_apps_summary">Select apps to launch gaming mode when you open them</string>
    <string name="gaming_mode_dynamic_add_title">Dynamic mode</string>
    <string name="gaming_mode_dynamic_add_summary">Try detecting and adding gaming apps automatically</string>

    <string name="gaming_mode_show_danmaku_title">Show danmaku</string>
    <string name="gaming_mode_danmaku_dynamic_notification_filter_title">Dynamic filtering notification</string>
    <string name="gaming_mode_danmaku_dynamic_notification_filter_summary">Automatically filter notifications such as download progress</string>
    <string name="gaming_mode_danmaku_size_horizontal_title">Danmaku size (horizontal)</string>
    <string name="gaming_mode_danmaku_size_vertical_title">Danmaku size (vertical)</string>
    <string name="gaming_mode_danmaku_speed_horizontal_title">Danmaku speed (horizontal)</string>
    <string name="gaming_mode_danmaku_speed_vertical_title">Danmaku speed (vertical)</string>
    <string name="gaming_mode_danmaku_blacklist">Blacklist</string>

    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>

</resources>
