<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2020 The exTHmUI Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/gaming_title" >

    <Preference
        android:key="gaming_mode_app_list"
        android:title="@string/gaming_mode_apps_title"
        android:summary="@string/gaming_mode_apps_summary"
        android:fragment="com.krypton.settings.fragment.miscellaneous.GamingModeAppListFragment" />

    <com.krypton.settings.preference.SystemSettingSwitchPreference
        android:key="gaming_mode_dynamic_add"
        android:title="@string/gaming_mode_dynamic_add_title"
        android:summary="@string/gaming_mode_dynamic_add_summary"
        android:defaultValue="true" />

    <com.krypton.settings.preference.SystemSettingSwitchPreference
        android:key="gaming_mode_disable_auto_brightness"
        android:title="@string/gaming_mode_disable_auto_brightness_title"
        android:summary="@string/gaming_mode_disable_auto_brightness_summary"
        android:defaultValue="true" />

    <Preference
        android:key="gaming_mode_notification_danmaku"
        android:title="@string/gaming_mode_notification_danmaku_title" 
        android:summary="@string/gaming_mode_notification_danmaku_summary"
        android:fragment="com.krypton.settings.fragment.miscellaneous.DanmakuSettingsFragment" />

    <Preference
        android:key="gaming_mode_quick_start_apps"
        android:title="@string/gaming_mode_quick_start_apps_title" 
        android:summary="@string/gaming_mode_quick_start_apps_summary"
        android:fragment="com.krypton.settings.fragment.miscellaneous.QuickStartAppSettingsFragment" />

    <PreferenceCategory
        android:title="@string/gaming_mode_performance">

        <Preference
            android:key="graphics_driver_dashboard"
            android:title="@string/graphics_driver_dashboard_title"
            android:summary="@string/graphics_driver_dashboard_summary"
            android:fragment="com.android.settings.development.graphicsdriver.GraphicsDriverDashboard" />

        <com.krypton.settings.preference.SystemSettingSwitchPreference
            android:key="gaming_mode_change_performance_level"
            android:title="@string/gaming_mode_change_performance_title"
            android:summary="@string/gaming_mode_change_performance_summary"
            android:defaultValue="true" />

        <com.krypton.settings.preference.SystemSettingSeekBarPreference
            android:key="gaming_mode_performance_level"
            android:title="@string/gaming_mode_performance_title"
            android:defaultValue="5"
            android:max="6"
            settings:min="0"
            settings:units=""
            android:dependency="gaming_mode_change_performance_level" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gaming_mode_dnd">

        <com.krypton.settings.preference.SystemSettingSwitchPreference
            android:key="gaming_mode_disable_notification_alert"
            android:title="@string/gaming_mode_disable_notification_alert_title"
            android:summary="@string/gaming_mode_disable_notification_alert_summary"
            android:defaultValue="true" />

        <com.krypton.settings.preference.SystemSettingSwitchPreference
            android:key="gaming_mode_disable_ringtone"
            android:title="@string/gaming_mode_disable_ringtone_title"
            android:summary="@string/gaming_mode_disable_ringtone_summary"
            android:defaultValue="false" />

        <com.krypton.settings.preference.SystemSettingSwitchPreference
            android:key="gaming_mode_auto_answer_call"
            android:title="@string/gaming_mode_auto_answer_call_title"
            android:summary="@string/gaming_mode_auto_answer_call_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gaming_mode_prevent_accidental_touch">

        <com.krypton.settings.preference.SystemSettingSwitchPreference
            android:key="gaming_mode_disable_gesture"
            android:title="@string/gaming_mode_disable_gesture_title"
            android:defaultValue="false" />

    </PreferenceCategory>
</PreferenceScreen>
